Resolved Thread issue